Show "Update" button

--- a/application/modules/default/views/scripts/user/products.phtml
+++ b/application/modules/default/views/scripts/user/products.phtml
@@ -616,6 +616,9 @@ $this->inlineScript()->appendScript(
                     if (data.status != 'success') {
                         return;
                     }
+
+                    var updatePploadFileBtn = '<a href="#" class="btn btn-native btn-xs btn-file-dropzone" data-updatepploadfile-btn="">Update</a>';
+                    var updatePploadFileBtnPerFile = '';
                     var deletePploadFileBtn = '<a href="#" class="btn btn-native btn-xs btn-file-dropzone" data-deletepploadfile-btn=""><span class="glyphicon glyphicon-trash"></span></a>';
                     var deletePploadFileBtnPerFile = '';
 
@@ -713,8 +716,10 @@ $this->inlineScript()->appendScript(
                         var downloadLink = '<a href="' + downloadUrl + '" id="data-link' + this.id + '">' + downloadLinkFilename + '</a>';
 
                         if(this.active == '1') {
+                            updatePploadFileBtnPerFile = updatePploadFileBtn;
                             deletePploadFileBtnPerFile = deletePploadFileBtn;
                         } else {
+                            updatePploadFileBtnPerFile = '';
                             deletePploadFileBtnPerFile = '';
                         }
 
@@ -772,6 +777,7 @@ $this->inlineScript()->appendScript(
                             + '<td>' + this.created_timestamp + '</td>'
                             + '<td style="text-align: right">' + humanFileSize(this.size) + '</td>'
                             + '<td style="text-align: right">' + numDownloads + '</td>'
+                            + '<td>' + updatePploadFileBtnPerFile + '</td>'
                             + '<td>' + deletePploadFileBtnPerFile + '</td>'
                             + '</tr>'
                         );
@@ -1019,8 +1025,7 @@ $this->inlineScript()->appendScript(
                         + '<td>' + data.file.created_timestamp + '</td>'
                         + '<td style="text-align: right">' + humanFileSize(data.file.size) + '</td>'
                         + '<td style="text-align: right">0</td>'
-                        // "Update" button is hidden currently
-                        + '<td><a href="#" class="btn btn-native btn-xs btn-file-dropzone" data-updatepploadfile-btn="" style="display: none;">Update</a></td>'
+                        + '<td><a href="#" class="btn btn-native btn-xs btn-file-dropzone" data-updatepploadfile-btn="">Update</a></td>'
                         + '<td><a href="#" class="btn btn-native btn-xs btn-file-dropzone" data-deletepploadfile-btn=""><span class="glyphicon glyphicon-trash"></span></a></td>'
                         + '</tr>'
                     );
