--- a/application/modules/default/views/scripts/partials/header/metaheader_react.phtml
+++ b/application/modules/default/views/scripts/partials/header/metaheader_react.phtml
@@ -49,54 +49,54 @@ $url_blog = Zend_Registry::get('config')->settings->client->default->url_blog;
         .metamenu ul.dropdown-menu  li.active span{ color:#eee; }
     </style>
 
-    <div class="small metamenu" >   
-        <?php            
+    <div class="small metamenu" >
+        <?php
             $domainshelper = new Default_View_Helper_FetchDomains();
-            $this->domainobjects = $domainshelper->fetchDomainObjects();    
-            $sname = Zend_Registry::get('store_host');  
-                       
+            $this->domainobjects = $domainshelper->fetchDomainObjects();
+            $sname = Zend_Registry::get('store_host');
+
             echo '<ul class="nav nav-pills meta-nav-top left">';
             $i = 0;
-                        
-            echo '<li class="" style="background-color:#eee; -moz-border-radius: 5px; border-radius: 5px; "><a href="http://'.$baseurl.'"><img src="/images/system/ocs-logo-rounded-16x16.png" class="logo"/> openDesktop.org :</a> </li>';                             
-           
+
+            echo '<li class="" style="background-color:#eee; -moz-border-radius: 5px; border-radius: 5px; "><a href="http://'.$baseurl.'"><img src="/images/system/ocs-logo-rounded-16x16.png" class="logo"/> openDesktop.org :</a> </li>';
+
             $preOrder = 0;
             $curOrder = 0;
             foreach ($this->domainobjects as $obj) {
-                $o =  $obj['order'];   
-                //$curOrder = floor($obj['order']/1000);      
+                $o =  $obj['order'];
+                //$curOrder = floor($obj['order']/1000);
                 //if($curOrder<10 or $curOrder>50) continue;
-                $curOrder = $obj['calcOrder'];   
+                $curOrder = $obj['calcOrder'];
                 $host =$obj['host'];
                 $name =$obj['name'];
                 if($curOrder!= $preOrder) $i=0;
 
                 if($curOrder > $preOrder && $preOrder !=0){
-                   echo '</ul></li>';      
+                   echo '</ul></li>';
                 }
-                if($i==0 && $preOrder !=0) echo '<li class="nav-divider-pling"> &#149; </li>'; 
+                if($i==0 && $preOrder !=0) echo '<li class="nav-divider-pling"> &#149; </li>';
 
                 if($curOrder ==9 && $i ==0){
                     // Desktops
-                    echo '<li class="dropdown"><a href="#">Desktops</a><ul class="dropdown-menu">';                                                                  
+                    echo '<li class="dropdown"><a href="#">Desktops</a><ul class="dropdown-menu">';
                 }else if($curOrder==10 && $i==0){
-                    // applications                    
-                    echo '<li class="dropdown"><a href="#">Applications</a><ul class="dropdown-menu">';                                                                 
+                    // applications
+                    echo '<li class="dropdown"><a href="#">Applications</a><ul class="dropdown-menu">';
                 }else if($curOrder ==20 && $i ==0){
-                    // artworks                    
-                    echo '<li class="dropdown"><a href="#">Addons</a><ul class="dropdown-menu">';                                                                  
+                    // artworks
+                    echo '<li class="dropdown"><a href="#">Addons</a><ul class="dropdown-menu">';
                 }/*else if($curOrder ==30 && $i ==0){
-                    // artworks                    
-                    echo '<li class="dropdown"><a href="#">Desktops</a><ul class="dropdown-menu">';                                                                  
+                    // artworks
+                    echo '<li class="dropdown"><a href="#">Desktops</a><ul class="dropdown-menu">';
                 }*/
                 else if($curOrder ==40 && $i ==0){
-                    // multimedia                    
-                    echo '<li class="dropdown"><a href="#">Artwork</a><ul class="dropdown-menu">';                                                                  
-                }   
+                    // multimedia
+                    echo '<li class="dropdown"><a href="#">Artwork</a><ul class="dropdown-menu">';
+                }
                 else if($curOrder ==50 && $i ==0){
-                    // multimedia                    
-                    echo '<li class="dropdown"><a href="#">Other</a><ul class="dropdown-menu">';                                                                  
-                }               
+                    // multimedia
+                    echo '<li class="dropdown"><a href="#">Other</a><ul class="dropdown-menu">';
+                }
                 if($sname == $host )
                 {
                     echo '<li class="active">';
@@ -112,27 +112,50 @@ $url_blog = Zend_Registry::get('config')->settings->client->default->url_blog;
                     $keyword = ' - '.$keyword;
                 }
                 */
-                 // z.b 150001 ende ==1 go real link otherwise /s/$name 
-                $last_char_check = substr($o, -1);                
+                 // z.b 150001 ende ==1 go real link otherwise /s/$name
+                $last_char_check = substr($o, -1);
 
-                echo '<a href="http://' . ($last_char_check=='1'?$host:$baseurl.'/s/'.$name) . '">'.  $name .'</a> </li>';    
+                echo '<a href="http://' . ($last_char_check=='1'?$host:$baseurl.'/s/'.$name) . '">'.  $name .'</a> </li>';
 
-                //$preOrder = floor($obj['order']/1000);  
-                $preOrder =$obj['calcOrder'];  
-                 $i++;                                                  
+                //$preOrder = floor($obj['order']/1000);
+                $preOrder =$obj['calcOrder'];
+                 $i++;
             }
-            echo '</ul></li>';   
-            echo '</ul>';                   
-                     
+            echo '</ul></li>';
+            echo '</ul>';
+
                 ?>
 
-            <ul class="nav nav-pills meta-nav-top right" style="margin-right: 30px;">     
-                <li><a href="/community" > Community </a> </li>        
+            <ul class="nav nav-pills meta-nav-top right" style="margin-right: 30px;">
+               <li><a href="/community" > Community </a> </li>
                <li><a href="<?=$url_forum?>" target="_blank"> Forum</a> </li>
                <li><a href="<?=$url_blog?>" target="_blank"> Blog</a> </li>
-               <li><a  id="plingList" href="/plings" class="popuppanel"> What are Plings? </a> </li>             
-               <li><a  id="ocsapiContent" href="/partials/ocsapicontent.phtml" class="popuppanel"> API </a> </li>  
-               <li> <a id="aboutContent" href="/partials/about.phtml" class="popuppanel">About </a>   </li>              
+               <li><a id="plingList" href="/plings" class="popuppanel"> What are Plings? </a> </li>
+               <li><a id="ocsapiContent" href="/partials/ocsapicontent.phtml" class="popuppanel"> API </a></li>
+               <li><a id="aboutContent" href="/partials/about.phtml" class="popuppanel">About </a></li>
+               <li id="user-dropdown-container">
+                 <div class="dropdown" id="user-dropdown">
+                   <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                     User
+                     <span class="caret"></span>
+                   </button>
+                   <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenu1">
+                     <li id="user-info-menu-item">
+                       <div id="user-info-section">
+                         <div class="user-avatar">
+                           <div class="no-avatar-user-letter">U</div>
+                         </div>
+                         <div class="user-details">
+                           details
+                         </div>
+                       </div>
+                     </li>
+                     <li id="main-seperator" role="separator" class="divider"></li>
+                     <li><a href="#">Another action</a></li>
+                     <li><a href="#">Something else here</a></li>
+                     <li><a href="#">Separated link</a></li>
+                   </ul>
+                 </div>
+               </li>
             </ul>
         </div>
-
