--- a/httpdocs/theme/react/assets/less/style.less
+++ b/httpdocs/theme/react/assets/less/style.less
@@ -2,8 +2,53 @@ out: ../css/style.css, sourcemap: true, compress: true
 
 @import "elements.less";
 
-header div.container.header {
-  height: 110px;
+header {
+
+  div.container.header {
+    height: 110px;
+  }
+}
+
+#user-dropdown {
+
+  .dropdown-menu {
+    width: 300px;
+    padding-top: 0;
+    overflow: hidden;
+
+    #user-info-section {
+      height: 100px;
+      padding: 10px 20px;
+      background: #f8f8f8;
+
+      .user-avatar {
+        width: 40%;
+        height: 80px;
+        width: 80px;
+        float: left;
+
+        .no-avatar-user-letter {
+          border-radius: 100%;
+          height: 100%;
+          width: 100%;
+          background-color: #c1c1c1;
+          text-align: center;
+          line-height: 80px;
+          font-size: 50px;
+          color: white;
+        }
+      }
+      .user-details {
+        width: 175px;
+        padding-left: 20px;
+        float: left;
+      }
+    }
+
+    #main-seperator {
+      margin-top: 0;
+    }
+  }
 }
 
 #main-header {
@@ -373,6 +418,64 @@ header div.container.header {
           display: table;
           margin: 0 auto;
           margin-bottom: 4px;
+        }
+      }
+    }
+  }
+}
+
+.modal {
+  .modal-dialog {
+    .modal-content {
+      .modal-header {
+        height: 70px;
+
+        .action-icon-container {
+          position: absolute;
+          left: 15px;
+          top: 15px;
+          height: 40px;
+          width: 40px;
+          text-align: center;
+          font-size: 40px;
+          line-height: 35px;
+          border:1px solid;
+          border-radius: 5px;
+
+          &.minus {
+            color: #fff;
+            background-color: #c9302c;
+            border-color: #ac2925;
+          }
+
+          &.plus {
+            color: #fff;
+            background-color: #449d44;
+            border-color: #398439;
+            line-height: 40px;
+          }
+        }
+
+        .modal-title {
+          text-transform: initial;
+          padding-left: 50px;
+          height: 40px;
+          line-height: 32px;
+        }
+
+        .close {
+          position: absolute;
+          top: 15px;
+          right: 15px;
+        }
+      }
+      .modal-footer {
+        text-align: center;
+
+        .glyphicon {
+          display: table;
+          margin: 0 auto;
+          float: none;
         }
       }
     }
@@ -889,6 +992,28 @@ table {
         top: 39px;
         right: 0;
 
+        #likes-container {
+          height: 63px;
+
+          .likes-label-container {
+            position: absolute;
+            bottom: 0;
+            right: 0;
+            width: 120px;
+            font-size: 15px;
+            text-align: right;
+            font-weight: 500;
+          }
+
+          &.liked-by-user {
+            .likes {
+              span {
+                color: white;
+              }
+            }
+          }
+        }
+
         .likes {
           float: right;
           width: 40px;
@@ -949,10 +1074,17 @@ table {
             cursor: pointer;
             .transition();
 
+            &:hover {
+              background-color: #c9302c;
+              color:white;
+            }
+
             &:active {
+              color:white;
               border-color: white;
               border-style: inset;
               border-width: 1px 0 0 1px;
+              background-color: #c9302c;
             }
           }
 
@@ -970,10 +1102,17 @@ table {
             cursor: pointer;
             .transition();
 
+            &:hover {
+              background-color: #449d44;
+              color:white;
+            }
+
             &:active {
+              color:white;
               border-style: inset;
               border-width: 1px 1px 0 0;
               border-color: white;
+              background-color:  #449d44;
             }
           }
 
@@ -987,6 +1126,10 @@ table {
               float: left;
               background-color: #acc8ac;
               border-bottom: 2px solid rgb(141, 158, 141);
+
+              &.red {
+                background-color: #c9302c;
+              }
             }
 
             .ratings-bar-empty {
@@ -1275,6 +1418,23 @@ table {
         right:0;
       }
     }
+
+    .comment-form-container {
+
+      textarea {
+        margin-bottom: 10px;
+      }
+
+      button[type="button"]{
+        float: right;
+        margin: 10px 0;
+
+        span.glyphicon {
+          margin-right: 10px;
+        }
+      }
+    }
+
   }
 
   .comment-list {
