--- a/application/modules/default/views/scripts/product/partials/listProducts.phtml
+++ b/application/modules/default/views/scripts/product/partials/listProducts.phtml
@@ -37,22 +37,33 @@ foreach ($this->products as $this->product) {
     if(isset($hl['tags']))         
     {
          $this->product->tags = $hl['tags'][0];
-         $tags = $tags.','.$hl['tags'][0];
+         if (strpos($tags,$hl['tags'][0]) !== false) {
+                 $tags = $tags.','.$hl['tags'][0];
+            }
+       
     }
      if(isset($hl['package_names']))         
     {
          $this->product->package_names = $hl['package_names'][0];
-         $tags = $tags.','.$hl['package_names'][0];
+         if (strpos($tags,$hl['package_names'][0]) !== false) {
+                  $tags = $tags.','.$hl['package_names'][0];
+            }
+       
     }
      if(isset($hl['arch_names']))         
     {
          $this->product->arch_names = $hl['arch_names'][0];
-         $tags = $tags.','.$hl['arch_names'][0];
+         if (strpos($tags,$hl['arch_names'][0]) !== false) {
+                  $tags = $tags.','.$hl['arch_names'][0];
+            }
+         
     }
     if(isset($hl['license_names']))         
     {
          $this->product->license_names = $hl['license_names'][0];
-         $tags = $tags.','.$hl['license_names'][0];
+           if (strpos($tags,$hl['license_names'][0]) !== false) {
+                  $tags = $tags.','.$hl['license_names'][0];
+            }        
     }
 
 ?>
