--- a/application/modules/default/views/scripts/product/partials/listProducts.phtml
+++ b/application/modules/default/views/scripts/product/partials/listProducts.phtml
@@ -36,34 +36,23 @@ foreach ($this->products as $this->product) {
     $tags = '';
     if(isset($hl['tags']))         
     {
-         $this->product->tags = $hl['tags'][0];
-         if (strpos($tags,$hl['tags'][0]) == false) {
-                 $tags = $tags.','.$hl['tags'][0];
-            }
-       
+         $this->product->tags = $hl['tags'][0];        
+          $tags = $tags.','.$hl['tags'][0];            
     }
      if(isset($hl['package_names']))         
     {
          $this->product->package_names = $hl['package_names'][0];
-         if (strpos($tags,$hl['package_names'][0]) == false) {
-                  $tags = $tags.','.$hl['package_names'][0];
-            }
-       
+          $tags = $tags.','.$hl['package_names'][0];                
     }
      if(isset($hl['arch_names']))         
     {
          $this->product->arch_names = $hl['arch_names'][0];
-         if (strpos($tags,$hl['arch_names'][0]) == false) {
-                  $tags = $tags.','.$hl['arch_names'][0];
-            }
-         
+          $tags = $tags.','.$hl['arch_names'][0];                  
     }
     if(isset($hl['license_names']))         
     {
          $this->product->license_names = $hl['license_names'][0];
-           if (strpos($tags,$hl['license_names'][0]) == false) {
-                  $tags = $tags.','.$hl['license_names'][0];
-            }        
+         $tags = $tags.','.$hl['license_names'][0];  
     }
 
 ?>
@@ -99,7 +88,11 @@ foreach ($this->products as $this->product) {
         <b><?php echo $this->product->cat_title?></b>
         <b class="username small">by <a  href="<?php echo $this->buildMemberUrl($this->product->member_id)?>" 
                     class="tooltipuser" data-tooltip-content="#tooltip_content" data-user="<?=$this->product->member_id?>">
-          <?php echo $this->product->username?></a></b>
+          <?php echo $this->product->username?></a>        
+          </b>
+          <p>
+          <?php echo $this->product->package_names?></a>                   
+          </p>
           
         </div>
 
@@ -111,6 +104,7 @@ foreach ($this->products as $this->product) {
          if (false === empty($tags)) {
              $list_packages = explode(',', $tags);
              $resultString = '';
+             $list_packages = array_unique($list_packages);
              foreach ($list_packages as $item) {
                  if(strlen($item)>0)
                  {
